@@ -1,21 +1,21 @@
 package pl.turlap.prawko.mappers;
 
 import org.springframework.stereotype.Component;
-import pl.turlap.prawko.dto.RoleDto;
 import pl.turlap.prawko.models.Role;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class RoleMapper {
 
-    public List<RoleDto> toRoleDto(List<Role> roles) {
+    public List<String> toRoleDtos(List<Role> roles) {
         return roles.stream()
-                .map(role -> RoleDto.builder()
-                        .name(role.getName())
-                        .build())
-                .collect(Collectors.toList());
+                .map(Role::getName)
+                .toList();
+    }
+
+    public Role fromDtoToRole(String roleName) {
+        return Role.builder().name(roleName.toUpperCase()).build();
     }
 
 }
